Disable CALayer overlays on 10.9

This is causing issues with PDF and print-preview for yet-unknown
reasons. Hopefully we can re-enable CALayer overlays when we find the
fix.

BUG=594343

Review URL: https://codereview.chromium.org/1819193002

Cr-Commit-Position: refs/heads/master@{#382498}

Former-commit-id: 52dd784270ee9386ceba4e29c198c86dea9912dc